--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@grandapp/app",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -12,7 +13,6 @@
     "prettier": "^2.5.1",
     "turbo": "^1.9.3"
   },
-  "name": "GrandApp",
   "packageManager": "yarn@1.22.19",
   "workspaces": [
     "apps/*",
