--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.0",
-    "express": "^4.18.2",
-    "typescript": "^5.0.4"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.1.1",
     "nodemon": "^2.0.22",
-    "prisma": "^4.14.0"
+    "prisma": "^4.14.0",
+    "typescript": "^5.0.4"
   }
 }
