--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "dev": "docker-compose up -d && nodemon src/index.ts"
   },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "4.14.0",
     "cors": "^2.8.5",
@@ -18,6 +21,7 @@
     "@types/node": "^20.1.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.14.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
