--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "docker-compose up -d && nodemon src/index.ts"
+    "dev": "docker-compose up -d && nodemon src/index.ts",
+    "seed": "prisma db seed"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed.ts"
