--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -1,3 +1,11 @@
 node_modules
 # Keep environment variables out of version control
 .env
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
