Co-authored-by: Albert Genís <Kirby1899@users.noreply.github.com>

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -19,6 +19,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/components/Pages/.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
