--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,12 +13,18 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.0",
+    "atob": "^2.1.2",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
+    "@types/atob": "^2.1.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.14.0",
