--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@prisma/client": "4.14.0",
     "@trycourier/courier": "^4.2.0",
+    "@types/cookie-parser": "^1.4.3",
     "atob": "^2.1.2",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
