--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "packages/*"
   ],
   "dependencies": {
-    "js-cookie": "^3.0.5",
-    "bcrypt": "^5.1.0"
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "js-cookie": "^3.0.5"
   }
 }
