--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,11 +13,15 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.0",
+    "@trycourier/courier": "^4.2.0",
     "atob": "^2.1.2",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "@types/atob": "^2.1.2",
