--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,24 +11,25 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
-    "@types/leaflet": "^1.9.3",
     "@types/axios": "^0.14.0",
+    "@types/leaflet": "^1.9.3",
     "axios": "^1.4.0",
     "firebase": "^9.22.0",
     "flatpickr": "^4.6.13",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
-    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-router-dom": "^6.11.1",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "vite": "^4.3.5"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.7",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.3",
+    "@types/multer": "^1.4.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
