--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "prettier": "^2.5.1",
@@ -21,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "js-cookie": "^3.0.5"
+    "js-cookie": "^3.0.5",
+    "react-router-dom": "^6.14.2"
   }
 }
